--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
   "name": "@dani9oo/vitae",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Backend con Typescript para Vitae",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --watch 'dist/**/*.js' ./dist/server.js",
-    "start": "node ./dist/server.js",
+    "dev": "nodemon",
+    "start": "node -r dotenv/config ./dist/server.js",
     "build": "tsc",
-    "deploy": "sls deploy",
-    "offline": "sls offline start"
+    "build-dev": "tsc -w"
   },
   "author": "dani9oo",
   "license": "MPL-2.0",
   "dependencies": {
+    "@typegoose/typegoose": "^9.1.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.3.2",
-    "class-validator": "^0.12.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.7",
-    "serverless-http": "^2.7.0"
+    "mongoose": "^6.0.10"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@types/node": "^14.17.21",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "nodemon": "^2.0.12",
-    "serverless": "^2.55.0",
-    "serverless-domain-manager": "^5.1.5",
-    "serverless-dotenv-plugin": "^3.9.0",
-    "serverless-offline": "^6.9.0",
-    "typescript": "^4.3.5"
+    "nodemon": "^2.0.13",
+    "typescript": "^4.4.3"
   }
 }
